# AIoT-Assignment

./: .gitignore  README.md  autoencoder.py  autoencoders-with-large-dataset.ipynb  autoencoders-with-small-dataset.ipynb  cnn.py  kmeans.py  pyproject.toml  snn.py  svm.py  utils.py
